--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
   <!-- CSS Implementing Plugins -->
-  <link rel="stylesheet" href="./assets/vendor/bootstrap-icons/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="./assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.css">
-  <link rel="stylesheet" href="./assets/vendor/swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="../assets/vendor/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.css">
+  <link rel="stylesheet" href="../assets/vendor/swiper/swiper-bundle.min.css">
 
   <!-- CSS Unify Template -->
-  <link rel="stylesheet" href="./assets/css/theme.min.css">
+  <link rel="stylesheet" href="../assets/css/theme.min.css">
 
   <base href="/">
 
@@ -30,16 +30,17 @@
   <app-root></app-root>
 
   <!-- JS Global Compulsory  -->
-  <script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- JS Implementing Plugins -->
-  <script src="./assets/vendor/hs-header/dist/hs-header.min.js"></script>
-  <script src="./assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.js"></script>
-  <script src="./assets/vendor/hs-go-to/dist/hs-go-to.min.js"></script>
-  <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/hs-header/dist/hs-header.min.js"></script>
+  <script src="../assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.js"></script>
+  <script src="../assets/vendor/hs-go-to/dist/hs-go-to.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+
 
   <!-- JS Unify -->
-  <script src="./assets/js/theme.min.js"></script>
+  <script src="../assets/js/theme.min.js"></script>
 
 
 
