--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
    <!-- Required Meta Tags Always Come First -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="L2i est une librairie en ligne qui vous permet de trouver des livres de tout genre.">
 
   <!-- Title -->
   <title>L2i | Votre librairie en ligne</title>
